<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ThemeManagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2196F3"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/back_button"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:id="@+id/text_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/googlesans"
                android:padding="8dp"
                android:text="@string/mythemes"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/image_help"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/help_button"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_help_outline_white" />

        </LinearLayout>

        <GridView
            android:id="@+id/gridview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="186dp"
            android:background="#212121"
            android:fontFamily="@font/googlesans"
            android:padding="8dp"
            android:text="@string/create_theme"
            android:textColor="#ffffff"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="176dp"
            android:clickable="true"
            android:visibility="invisible"
            app:backgroundTint="#2196F3"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_palette_white" />

        <TextView
            android:id="@+id/textview_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="116dp"
            android:background="#212121"
            android:fontFamily="@font/googlesans"
            android:padding="8dp"
            android:text="@string/import_theme"
            android:textColor="#ffffff"
            android:visibility="invisible" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="106dp"
            android:clickable="true"
            android:visibility="invisible"
            app:backgroundTint="#3F51B5"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_get_app_white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_add_white" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
